2006-08-01 Riccardo Mottola <riccardo@kaffe.org>

	* Headers/xlib/XGPrivate.h,
	Headers/xlib/GSXftFontInfo.h,
	Headers/xlib/XGFontSetFontInfo.h:
	changed method signatures to fix bug intruduced by RFM during typo fixes

2006-07-09  Fred Kiefer <FredKiefer@gmx.de>

	* Header/x11/XGGeneric.h,
	* Source/x11/XGServerWindow.m (-_setupRootWindow, -window::::),
	* Source/x11/XGServerEvent.m (-processEvent:):
	Impelemented hanlding for _NET_WM_PING.

2006-07-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/x11/XGServer.m:
	Handle SIGTERM by calling ([NSApp terminate: NSApp]) to shut down
	cleanly.

2006-07-04 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/art/ftfont.m:
	* Source/x11/XGServer.m:
	* Source/x11/XGDragView.m:
	* Source/GSBackend.m:
	* Source/gsc/GSGState.m:
	* Tools/gpbs.m:
	Avoid spurious warnings produced by gcc-4.1

2006-06-22 Richard Frith-Macdonald <rfm@gnu.org>

	* Tools/gpbs.m: Fix to get profiling to work for this daemon

2006-05-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/XGGState.m (-dealloc, -deepen):
	Free XFT drawing structures and don't reuse the same ones for
	copies of the gstate. Fixes bug #13705.
	
2006-05-29  Fred Kiefer <FredKiefer@gmx.de>

	* Source/xlib/GSXftFontInfo.m (FcFontEnumerator
	-defaultSystemFontName, -defaultBoldSystemFontName,
	-defaultFixedPitchFontName): Added this methods which return
	values similar to the art and cairo backend.
	Removed compiler warnings from this file.
	* Source/xlib/XGFontSetFontInfo.m (-dealloc): Call super dealloc.
	* Source/xlib/XGGeometry.m
	* Source/xlib/XGFont.m
	* Source/xlib/XGGState.m:
	* Tools/font_cacher.m:
	Removed compiler warnings. 

2006-05-27  Fred Kiefer <FredKiefer@gmx.de>

	* Source/x11/XGServerWindow.m (-_DPSsetcursor::): Don't set cursor
	on root window. Patch by Mircea Trache <aer@shaw.ca>.

2006-05-13  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/x11/XGServer.h,
	* Source/x11/XGServerWindow.m (-_XFrameToXHints:for:): New method to