@@ -1,10 +1,16 @@
+2006-08-10 Christopher Armstrong (carmstrong@fastmail.com.au)
+	(patch committed by Greg Casamento) 
+	* Source/winlib/WIN32GState.m: Better 24bit image support, Slightly 
+	extended composite method, Dashed-line handling (for selections)
+	* Headers/winlin/WIN32FontInfo.m: Changed method 
+	signature draw:length:onDC:at: to correct spelling of length.
+
 2006-08-01 Riccardo Mottola <riccardo@kaffe.org>
 
 	* Headers/xlib/XGPrivate.h,
 	Headers/xlib/GSXftFontInfo.h,
 	Headers/xlib/XGFontSetFontInfo.h:
 	changed method signatures to fix bug intruduced by RFM during typo fixes
-
 2006-07-09  Fred Kiefer <FredKiefer@gmx.de>
 
 	* Header/x11/XGGeneric.h,
